pong-evolution/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-evolution
  namespace: games
  labels:
    app: pong-evolution
    app.kubernetes.io/name: pong-evolution
    app.kubernetes.io/component: game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-evolution
  template:
    metadata:
      labels:
        app: pong-evolution
    spec:
      imagePullSecrets:
        - name: gcr-secret
      containers:
        - name: pong-evolution
          image: australia-southeast1-docker.pkg.dev/chrispy/games/pong-evolution:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
